--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
-# file generated 2021-10-12 - see update-dependencies.sh
-astroid==2.8.2
+# file generated 2021-12-14 - see update-dependencies.sh
+astroid==2.9.0
 attrs==21.2.0
-autopep8==1.5.7
+autopep8==1.6.0
 backoff==1.11.1
-boto3==1.18.59
-botocore==1.21.59
+boto3==1.20.24
+botocore==1.23.24
 certifi==2021.10.8
-charset-normalizer==2.0.7
-coverage==6.0.2
-Django==2.2.24
+charset-normalizer==2.0.9
+coverage==6.2
+Django==2.2.25
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.1
 feedgen==0.9.0
 freezegun==1.1.0
-idna==3.2
-importlib-metadata==4.8.1
+idna==3.3
+importlib-metadata==4.8.2
 iniconfig==1.1.1
-isort==5.9.3
+isort==5.10.1
 jmespath==0.10.0
 kids.cache==0.0.7
 lazy-object-proxy==1.6.0
-lxml==4.6.3
-markdown2==2.4.1
+lxml==4.7.1
+markdown2==2.4.2
 mccabe==0.6.1
-newrelic==7.0.0.166
-packaging==21.0
+newrelic==7.2.4.171
+packaging==21.3
 platformdirs==2.4.0
 pluggy==1.0.0
 psycopg2==2.8.6
-py==1.10.0
+py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==2.11.1
+pylint==2.12.2
 pylint-django==2.4.4
 pylint-plugin-utils==0.6
-pyparsing==2.4.7
+pyparsing==3.0.6
 pytest==6.2.5
 pytest-cov==3.0.0
-pytest-django==4.4.0
+pytest-django==4.5.2
 pytest-freezegun==0.4.2
 python-dateutil==2.8.2
 python-json-logger==0.1.11
@@ -51,11 +51,11 @@ s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
-tomli==1.2.1
-typed-ast==1.4.3
-typing-extensions==3.10.0.2
+tomli==1.2.3
+typed-ast==1.5.1
+typing_extensions==4.0.1
 Unidecode==1.3.2
 urllib3==1.26.7
 uWSGI==2.0.20
-wrapt==1.12.1
+wrapt==1.13.3
 zipp==3.6.0
