--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-# file generated 2023-08-30 - see update-dependencies.sh
+# file generated 2023-10-04 - see update-dependencies.sh
 asgiref==3.7.2
 astroid==2.11.7
 autopep8==1.7.0
 backoff==1.11.1
-boto3==1.28.37
-botocore==1.31.37
+boto3==1.28.59
+botocore==1.31.59
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 coverage==6.5.0
 dill==0.3.7
-Django==3.2.20
+Django==3.2.21
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
@@ -25,8 +25,8 @@ lazy-object-proxy==1.9.0
 lxml==4.9.3
 markdown2==2.4.10
 mccabe==0.7.0
-packaging==23.1
-platformdirs==3.10.0
+packaging==23.2
+platformdirs==3.11.0
 pluggy==1.3.0
 psycopg2==2.8.6
 pycodestyle==2.11.0
@@ -34,25 +34,25 @@ pyflakes==2.5.0
 pylint==2.14.5
 pylint-django==2.5.3
 pylint-plugin-utils==0.8.2
-pytest==7.4.0
+pytest==7.4.2
 pytest-cov==3.0.0
 pytest-django==4.5.2
 pytest-freezegun==0.4.2
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2023.3
+pytz==2023.3.post1
 requests==2.31.0
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.6.2
+s3transfer==0.7.0
 six==1.16.0
 sqlparse==0.4.4
 toml==0.10.2
 tomli==2.0.1
 tomlkit==0.12.1
-typing_extensions==4.7.1
-Unidecode==1.3.6
-urllib3==1.26.16
+typing_extensions==4.8.0
+Unidecode==1.3.7
+urllib3==1.26.17
 uWSGI==2.0.22
 wrapt==1.15.0
