--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-# file generated 2024-02-09 - see update-dependencies.sh
+# file generated 2024-03-19 - see update-dependencies.sh
 asgiref==3.7.2
 astroid==2.11.7
 autopep8==1.7.0
 backoff==1.11.1
-boto3==1.34.38
-botocore==1.34.38
+boto3==1.34.65
+botocore==1.34.65
 certifi==2024.2.2
 charset-normalizer==3.3.2
 coverage==6.5.0
 dill==0.3.8
-Django==3.2.24
+Django==3.2.25
 django-annoying==0.10.6
 django-markdown2==0.3.1
 et3==1.5.2
@@ -23,9 +23,9 @@ jmespath==1.0.1
 kids.cache==0.0.7
 lazy-object-proxy==1.10.0
 lxml==5.1.0
-markdown2==2.4.12
+markdown2==2.4.13
 mccabe==0.7.0
-packaging==23.2
+packaging==24.0
 platformdirs==4.2.0
 pluggy==1.4.0
 psycopg2==2.8.6
@@ -38,20 +38,20 @@ pytest==7.4.4
 pytest-cov==3.0.0
 pytest-django==4.8.0
 pytest-freezegun==0.4.2
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-json-logger==0.1.11
 python-slugify==1.2.6
 pytz==2024.1
 requests==2.31.0
 requests-cache==0.4.13
 rfc3339==6.0
-s3transfer==0.10.0
+s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.4.4
 toml==0.10.2
 tomli==2.0.1
-tomlkit==0.12.3
-typing_extensions==4.9.0
+tomlkit==0.12.4
+typing_extensions==4.10.0
 Unidecode==1.3.8
 urllib3==1.26.18
 uWSGI==2.0.24
